--- a/src/pages/Services.css
+++ b/src/pages/Services.css
@@ -257,7 +257,7 @@
   max-width: 520px;
   width: 90%;
   padding: 35px;
-  border-radius: 12px;
+  border-radius: 20px;
   box-sizing: border-box;
 }
 
@@ -277,4 +277,31 @@
   .popup-form .apply-btn {
     font-size: 15px;
   }
+}
+/* Scrollbar Track */
+.popup-content::-webkit-scrollbar {
+  width: 8px;
+}
+
+/* Scrollbar Track Background */
+.popup-content::-webkit-scrollbar-track {
+  background: #0d1422;
+  border-radius: 10px;
+}
+
+/* Scrollbar Thumb */
+.popup-content::-webkit-scrollbar-thumb {
+  background-color: #1a59a6;
+  border-radius: 10px;
+  border: 2px solid #0d1422;
+}
+
+/* Firefox */
+.popup-content {
+  scrollbar-width: auto;
+  scrollbar-color: #efeff0 #1f3c75;
+}
+.popup-content {
+  max-height: 80vh;
+  overflow-y: auto;
 }
